# trajdata

./: pyproject.toml
src/trajdata/: dataset.py
