[tool.poetry]
name = "trajdata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy ="^1.23.0"
tqdm = "^4.64.0"
matplotlib ="^3.5.2"
dill = "^0.3.5"
pandas = "^1.4.3"
pyarrow =  "^8.0.0"
zarr =  "^2.12.0"
torch = "^1.12.0"
torchvision = "^0.13.0"
torchaudio = "^0.12.0"
kornia = "^0.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"